--- a/html/main.html
+++ b/html/main.html
@@ -15,10 +15,12 @@
     .nav-bar {
       width: 100%;
       height: 6.25em;
+      min-width: 1490px;
       background-color: #333333;
     }
     .page-container {
       position: relative;
+      min-width: 1490px;
       width: 100%;
     }
     .menu-list {
@@ -76,7 +78,7 @@
       line-height: 2em;
     }
     .tag-container > .tag {
-      padding: -0.3em 0.2em 0 0.6em;
+      padding: 0.1em 0.2em 0 0.6em;
       position: relative;
       bottom: 0;
       height: 100%;
@@ -147,6 +149,11 @@
           </div>
         </li>
         <li>
+          <div class="menu-item pointer" nav-to="characterManagement">
+            角色管理
+          </div>
+        </li>
+        <li>
           <div class="menu-item pointer" nav-to="userManagement">
             用户管理
           </div>
@@ -191,7 +198,10 @@
              }
          }
       });
+
+      $(".menu-item[nav-to='characterManagement']").click();
   });
+
   var Tag = function(tagName) {
     return $('<span class="tag">\n' +
         '      <span class="tag-name">' + tagName + '</span>\n' +
