--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
               $('#login-panel').fadeIn(100);
           });
       });
+
+      $('.login-btn').on('click', function() {
+        window.location.href = 'html/main.html';
+      })
     });
 </script>
 </html>
